change: repo and package name

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -6,7 +6,7 @@
             "source": [
                 "# Example usage\n",
                 "\n",
-                "To use `pybrowser` in a project:"
+                "To use `thatscrapper` in a project:"
             ]
         },
         {
@@ -15,9 +15,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import pybrowser\n",
+                "import thatscrapper\n",
                 "\n",
-                "print(pybrowser.__version__)"
+                "print(thatscrapper.__version__)"
             ]
         },
         {
@@ -36,9 +36,9 @@
             "outputs": [],
             "source": [
                 "import time\n",
-                "import pybrowser\n",
+                "import thatscrapper\n",
                 "\n",
-                "crawler = pybrowser.Crawler()\n",
+                "crawler = thatscrapper.Crawler()\n",
                 "# open page\n",
                 "crawler.goto(\"https://phptravels.com/demo/\")\n",
                 "# get form wrapper\n",
@@ -68,7 +68,7 @@
             "source": [
                 "## Extract a table\n",
                 "\n",
-                "To scrap, collect ou handle data informations, such as text, tables or images, ```pybroswer``` comes with the module ```extractor``` to work with elements or addresses and return the desired data as needed. Here is an example of obtaining a table as ```pandas.DataFrame object```:"
+                "To scrap, collect ou handle data informations, such as text, tables or images, ```thatscrapper``` comes with the module ```extractor``` to work with elements or addresses and return the desired data as needed. Here is an example of obtaining a table as ```pandas.DataFrame object```:"
             ]
         },
         {
@@ -78,12 +78,12 @@
             "outputs": [],
             "source": [
                 "import time\n",
-                "import pybrowser as pb\n",
+                "import thatscrapper as ts\n",
                 "\n",
-                "crawler = pb.Crawler(browser='chrome')\n",
+                "crawler = ts.Crawler(browser='chrome')\n",
                 "\n",
                 "crawler.goto(\"https://www.techlistic.com/p/demo-selenium-practice.html\")\n",
-                "costumers_table = pb.extractor.Table(crawler, \"customers\", \"id\")\n",
+                "costumers_table = ts.extractor.Table(crawler, \"customers\", \"id\")\n",
                 "\n",
                 "# table as pandas dataframe (see https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)\n",
                 "print(costumers_table.data)\n",
@@ -118,16 +118,16 @@
                 }
             ],
             "source": [
-                "import pybrowser as pb\n",
+                "import thatscrapper as ts\n",
                 "\n",
-                "crawler = pb.Crawler(browser='chrome', headless=True)\n",
+                "crawler = ts.Crawler(browser='chrome', headless=True)\n",
                 "\n",
                 "crawler.goto(\"https://www.techlistic.com/p/demo-selenium-practice.html\")\n",
                 "\n",
-                "items = pb.extractor.UnorderedList(crawler, \"(//div[@dir=\\'ltr\\'])[7]\", \"xpath\")\n",
+                "items = ts.extractor.UnorderedList(crawler, \"(//div[@dir=\\'ltr\\'])[7]\", \"xpath\")\n",
                 "\n",
                 "for item in items:\n",
-                "    li = pb.extractor.html(item)\n",
+                "    li = ts.extractor.html(item)\n",
                 "    print(li)\n",
                 "crawler.quit()"
             ]
@@ -148,9 +148,9 @@
             "outputs": [],
             "source": [
                 "import re\n",
-                "import pybrowser as pb\n",
+                "import thatscrapper as ts\n",
                 "\n",
-                "crawler = pb.Crawler()\n",
+                "crawler = ts.Crawler()\n",
                 "\n",
                 "# let's get some photos of cats\n",
                 "query = \"cat\"\n",
@@ -168,7 +168,7 @@
                 "    result = re.findall(r\"./(.*?)\\?\", img_url)\n",
                 "    img_filename = result[0].split('/')[-1]\n",
                 "    files.append(img_filename)\n",
-                "    pb.extractor.download(img_url, img_filename)\n",
+                "    ts.extractor.download(img_url, img_filename)\n",
                 "crawler.quit()"
             ]
         },
@@ -224,9 +224,9 @@
             "outputs": [],
             "source": [
                 "import time\n",
-                "import pybrowser\n",
+                "import thatscrapper\n",
                 "\n",
-                "crawler = pybrowser.Crawler()\n",
+                "crawler = thatscrapper.Crawler()\n",
                 "\n",
                 "url = \"https://unixpapa.com/js/testmouse.html\"\n",
                 "crawler.goto(url)\n",
