change name to 'thatscraper'

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -6,7 +6,7 @@
             "source": [
                 "# Example usage\n",
                 "\n",
-                "To use `thatscrapper` in a project:"
+                "To use `thatscraper` in a project:"
             ]
         },
         {
@@ -23,9 +23,9 @@
                 }
             ],
             "source": [
-                "import thatscrapper\n",
+                "import thatscraper\n",
                 "\n",
-                "print(thatscrapper.__version__)"
+                "print(thatscraper.__version__)"
             ]
         },
         {
@@ -44,9 +44,9 @@
             "outputs": [],
             "source": [
                 "import time\n",
-                "import thatscrapper\n",
+                "import thatscraper\n",
                 "\n",
-                "crawler = thatscrapper.Crawler()\n",
+                "crawler = thatscraper.Crawler()\n",
                 "# open page\n",
                 "crawler.goto(\"https://phptravels.com/demo/\")\n",
                 "# get form wrapper\n",
@@ -76,7 +76,7 @@
             "source": [
                 "## Extract a table\n",
                 "\n",
-                "To scrap, collect ou handle data informations, such as text, tables or images, ```thatscrapper``` comes with the module ```extractor``` to work with elements or addresses and return the desired data as needed. Here is an example of obtaining a table as ```pandas.DataFrame object```:"
+                "To scrap, collect ou handle data informations, such as text, tables or images, ```thatscraper``` comes with the module ```extractor``` to work with elements or addresses and return the desired data as needed. Here is an example of obtaining a table as ```pandas.DataFrame object```:"
             ]
         },
         {
@@ -94,7 +94,7 @@
             ],
             "source": [
                 "import time\n",
-                "import thatscrapper as ts\n",
+                "import thatscraper as ts\n",
                 "\n",
                 "crawler = ts.Crawler(browser='chrome', headless=True)\n",
                 "\n",
@@ -134,7 +134,7 @@
                 }
             ],
             "source": [
-                "import thatscrapper as ts\n",
+                "import thatscraper as ts\n",
                 "\n",
                 "crawler = ts.Crawler(browser='chrome', headless=True)\n",
                 "\n",
@@ -164,7 +164,7 @@
             "outputs": [],
             "source": [
                 "import re\n",
-                "import thatscrapper as ts\n",
+                "import thatscraper as ts\n",
                 "\n",
                 "crawler = ts.Crawler()\n",
                 "\n",
@@ -239,9 +239,9 @@
             "outputs": [],
             "source": [
                 "import time\n",
-                "import thatscrapper\n",
+                "import thatscraper\n",
                 "\n",
-                "crawler = thatscrapper.Crawler()\n",
+                "crawler = thatscraper.Crawler()\n",
                 "\n",
                 "url = \"https://unixpapa.com/js/testmouse.html\"\n",
                 "crawler.goto(url)\n",
