--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -20,6 +20,16 @@
         },
         {
             "cell_type": "code",
+            "execution_count": 1,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%load_ext autoreload\n",
+                "%autoreload 2"
+            ]
+        },
+        {
+            "cell_type": "code",
             "execution_count": 2,
             "metadata": {},
             "outputs": [],
@@ -259,7 +269,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.14"
+            "version": "3.10.6"
         },
         "vscode": {
             "interpreter": {
